test/users/shetag/iteratorWithOnNoReturnType.good
iteratorWithOn.chpl:5: In iterator 'g':
iteratorWithOn.chpl:8: error: invalid use of 'yield' within 'on' in serial iterator
